@@ -1,6 +1,7 @@
 = 1.2.28 - 2025-10-TBD =
 * Add Block Visibility support for non FSE themes - ADDED
 * Detect Breakdance builder preview - ADDED
+* Check function mb_strtolower exists or not - FIXED
 
 = 1.2.27 - 2025-10-16 =
 * Hover style is not working on clone BS element - FIXED
